增加了个很无敌的功能

--- a/html/index1.html
+++ b/html/index1.html
@@ -13,6 +13,9 @@
 <div id="box" onmousedown="Mouseclick(event);">
     <div class="ball" state="stop"></div>
     <div class="rect" id="rect01"></div>
+	<div id="">
+		//8888
+	</div>
 </div>
 <div id="juzhong">
     <button onclick="addballs();">增加小球</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
