增加了一个更无敌功能

--- a/html/index1.html
+++ b/html/index1.html
@@ -16,6 +16,9 @@
 	<div id="">
 		//8888
 	</div>
+	<div id="">
+		/222
+	</div>
 </div>
 <div id="juzhong">
     <button onclick="addballs();">增加小球</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
